--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "finance-tracker",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://almazxx.github.io/finance-tracker",
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.1",
     "@types/node": "^16.18.11",
@@ -9,6 +10,7 @@
     "@types/react-dom": "^18.0.10",
     "axios": "^1.2.2",
     "bootstrap": "^5.2.3",
+    "gh-pages": "^5.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
@@ -20,7 +22,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -d build",
+    "predeploy": "npm run build"
   },
   "eslintConfig": {
     "extends": [
